[package]
name = "ole-protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpz-share-conversion-core = { git = "https://github.com/privacy-scaling-explorations/mpz" }
p256 = { version = "0.13", features = ["arithmetic"] }
itybity = "0.2"
rand = "0.8"



